--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
         <p>this is paragraph</p>
     </div>
-    
+    <header>
+        <h1>website</h1>
+    </header>
+    <section>
+        <article>
+            <h2>article heading </h2>
+            <p>some article</p>
+
+        </article>
+    </section>
+    <footer>
+        <p>footer info</p>
+    </footer>
+
 </body>
+
 </html>
