--- a/index.html
+++ b/index.html
@@ -4,26 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>profile card</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <p>this is paragraph</p>
-    </div>
-    <header>
-        <h1>website</h1>
-    </header>
-    <section>
-        <article>
-            <h2>article heading </h2>
-            <p>some article</p>
+ <div class="profile-card"> 
+    <img src="img.jpg"profile picture" class="profile-img">
 
-        </article>
-    </section>
-    <footer>
-        <p>footer info</p>
-    </footer>
+    <h2 class="name">jogn doe </h2>
+    <P class="bio"> web developer and designers</P>
+    <a href="#" class="btn">follow</a>
+ </div>
 
 </body>
 
